version/0.31/_sources/api/solver/_autosummary/settings/settings_14.rst.txt
:orphan:

.. _settings_14:

settings
========

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.settings_14
    :show-inheritance:

.. rubric:: Attributes

=======================   ======================================

Attribute                                                Summary

=======================   ======================================
:ref:`phase <phase_37>`       Domain name to define settings on.

=======================   ======================================

.. rubric:: Included in:

========================================   ===================================

Parent                                                                 Summary

========================================   ===================================
:ref:`network_1_child <network_1_child>`       'child_object_type' of network.

========================================   ===================================

