version/0.33/_sources/api/solver/_autosummary/settings/settings_14.rst.txt
:orphan:

.. _settings_14:

settings
========

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.settings_14
    :show-inheritance:

.. rubric:: Attributes

============================   ======================================

Attribute                                                     Summary

============================   ======================================
:ref:`periodic <periodic_1>`                      Help not available.

:ref:`geometry <geometry_7>`                      Help not available.

:ref:`phase <phase_16>`            Domain name to define settings on.

============================   ======================================

.. rubric:: Included in:

======================================   ====================================

Parent                                                                Summary

======================================   ====================================
:ref:`periodic_child <periodic_child>`       'child_object_type' of periodic.

======================================   ====================================

